--- a/index.html
+++ b/index.html
@@ -198,6 +198,8 @@
 <body>
     <h1 class="page-title">PUDHE CHALA</h1>
 
+    <div id="google_translate_element"></div>
+
     <div class="campaign-card">
         <!-- Swiper Carousel -->
          <div class="tiny-banner">
@@ -285,6 +287,24 @@
         });
     </script>
 
-</body>
+    <!-- Google Translate Stuff -->
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        console.log("Initializing Google Translate Element");
+        new google.translate.TranslateElement(
+          {
+            pageLanguage: "en",
+            includedLanguages: "en,hi,mr",
+            layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+          },
+          "google_translate_element"
+        );
+      }
+    </script>
 
+    <script
+      type="text/javascript"
+      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+    ></script>
+  </body>
 </html>
