Testing why the images do not load when hosted on GitHub pages

--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
          </div>
         <div class="swiper">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="/pictures/a.webp"
+                <div class="swiper-slide"><img src="pictures/a.webp"
                         alt="Save Nicobar image" loading="lazy"></div>
-                <div class="swiper-slide"><img src="/pictures/b.webp"
+                <div class="swiper-slide"><img src="pictures/b.webp"
                         alt="Save Nicobar image" loading="lazy"></div>
                 <div class="swiper-slide"><img src="/pictures/c.webp"
                         alt="Save Nicobar Image" loading="lazy"></div>
