Added a TODO message about the changes that were made to the image paths

--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@
          </div>
         <div class="swiper">
             <div class="swiper-wrapper">
+                <!-- TODO: The first two images are temporarily using a different path structure to the original repository, need to 
+                 possibly update the deployment rather than changing the code itself  -->
                 <div class="swiper-slide"><img src="pictures/a.webp"
                         alt="Save Nicobar image" loading="lazy"></div>
                 <div class="swiper-slide"><img src="pictures/b.webp"
